--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 :host > div {
 	margin: var(--margin-block);
 	width: var(--input-max-size);
@@ -52,7 +54,6 @@ label {
 }
 
 select {
-	-webkit-appearance: none;
 	appearance: none;
 
 	background-color: var(--bg-color);
@@ -198,6 +199,7 @@ select:not(:required) ~ label > #required-text {
 }
 
 /* Invalid */
+
 select:not(:focus):not(:hover):required:invalid,
 select:not(:focus):not(:hover):required:invalid ~ * {
 	--bg-color: var(--invalid-bg);
@@ -222,6 +224,7 @@ select:not(:focus):required:invalid ~ #info-box #info-text {
 }
 
 /* Valid */
+
 select:not(:focus):not(:hover):required:valid,
 select:not(:focus):not(:hover):required:valid ~ * {
 	--bg-color: var(--valid-bg);
@@ -245,6 +248,7 @@ select:not(:focus):required:valid ~ #attention-marker {
 }
 
 /* Hover */
+
 select:hover,
 select:hover ~ * {
 	--bg-color: var(--hover-bg);
@@ -258,6 +262,7 @@ select:hover ~ * {
 }
 
 /* Focus */
+
 select:focus,
 select:focus ~ * {
 	--bg-color: var(--focus-bg);
@@ -275,9 +280,9 @@ select:focus ~ #outer-border::after {
 }
 
 /* Options */
+
 optgroup,
 option {
-	-webkit-appearance: none;
 	color: inherit;
 	appearance: none;
 	background: black;
@@ -295,7 +300,7 @@ option {
 
 :host option:hover {
 	color: var(--focus-inner-border);
-	background: var(--hover-bg)
+	background: var(--hover-bg);
 }
 
 option:disabled {
