--- a/src/css/fonts/oxanium.css
+++ b/src/css/fonts/oxanium.css
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'Oxanium';
+	font-family: Oxanium;
 	src: url('./oxanium.woff2') format('woff2-variations');
 	font-weight: 100 900;
 	font-style: normal;
