--- a/src/components/AdamElement/AdamElement.css
+++ b/src/components/AdamElement/AdamElement.css
@@ -2,7 +2,7 @@
 
 :host {
 	font-family: inherit;
-	font-size: initial;
+	font-size: inherit;
 	color: inherit;
 	font-weight: inherit;
 	line-height: 1;
